# pure-teleapi

./: .gitignore  LICENSE  README.md  pyproject.toml
apigen/: __main__.py  gen.py  helpers.py  models.py  parse.py
examples/: echobot_async.py  echobot_async_upload.py  echobot_webhooks.py  quickstart.py
teleapi/: __init__.py  httpx_transport.py  teleapi.py  teleproxy.py  teletransport.py
tests/: test.py
